--- a/src/guacamoleval/create_figures.ipynb
+++ b/src/guacamoleval/create_figures.ipynb
@@ -16,39 +16,40 @@
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
+    "from typing import Final\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.ticker import StrMethodFormatter"
    ],
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-22T15:05:30.848681Z",
-     "start_time": "2024-03-22T15:05:30.846568Z"
+     "end_time": "2024-03-26T15:46:47.134986Z",
+     "start_time": "2024-03-26T15:46:47.132709Z"
     }
    },
    "id": "initial_id",
-   "execution_count": 64
+   "execution_count": 71
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 72,
    "id": "a9abeed7e5df80d6",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-22T15:05:30.851933Z",
-     "start_time": "2024-03-22T15:05:30.849822Z"
+     "end_time": "2024-03-26T15:46:48.240250Z",
+     "start_time": "2024-03-26T15:46:48.238188Z"
     }
    },
    "outputs": [],
    "source": [
-    "NUM_MOLS_COL_NAME = \"num_mols\"\n",
-    "PAD_LENGTH_COL_NAME = \"pad_length\"\n",
-    "FCD_COL_NAME = \"fcd\"\n",
-    "COL_NAMES = [NUM_MOLS_COL_NAME, PAD_LENGTH_COL_NAME, FCD_COL_NAME]\n",
-    "INPUT_DATA_FILE_NAME = \"../../data/fcd.csv\"\n",
-    "OUTPUT_FIGURE_FILE_NAME = \"../../figures/fcd_values.jpg\"\n",
-    "DEFAULT_PAD_LENGTH = 350  # the default padding length in the python fcd package"
+    "NUM_MOLS_COL_NAME: Final[str] = \"num_mols\"\n",
+    "PAD_LENGTH_COL_NAME: Final[str] = \"pad_length\"\n",
+    "FCD_COL_NAME: Final[str] = \"fcd\"\n",
+    "COL_NAMES: Final[list[str]] = [NUM_MOLS_COL_NAME, PAD_LENGTH_COL_NAME, FCD_COL_NAME]\n",
+    "INPUT_DATA_FILE_NAME: Final[Path] = \"../../data/fcd.csv\"\n",
+    "OUTPUT_FIGURE_FILE_NAME: Final[Path] = \"../../figures/fcd_values.jpg\"\n",
+    "DEFAULT_PAD_LENGTH: Final[int] = 350  # the default padding length in the python fcd package"
    ]
   },
   {
@@ -63,13 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
    "id": "3107c8d7e57875f",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-22T15:05:30.867798Z",
-     "start_time": "2024-03-22T15:05:30.865394Z"
+     "end_time": "2024-03-26T15:47:02.473987Z",
+     "start_time": "2024-03-26T15:47:02.470429Z"
     }
    },
    "outputs": [],
@@ -87,13 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 74,
    "id": "9ffb28a7eadcd5c6",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-22T15:05:30.874182Z",
-     "start_time": "2024-03-22T15:05:30.870736Z"
+     "end_time": "2024-03-26T15:47:09.239537Z",
+     "start_time": "2024-03-26T15:47:09.228998Z"
     }
    },
    "outputs": [],
@@ -115,13 +116,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 75,
    "id": "12e0152d9503364",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-22T15:05:31.082862Z",
-     "start_time": "2024-03-22T15:05:30.875196Z"
+     "end_time": "2024-03-26T15:47:11.593454Z",
+     "start_time": "2024-03-26T15:47:11.412989Z"
     }
    },
    "outputs": [
